--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ Margin Top
 ----------------*/
 .iq-mt-0 { margin-top: 0px; }
 .iq-mt-5 { margin-top: 5px; }
-.iq-mt-10 { margin-top: 10px; }
+.iq-mt-10 { margin-top: 10px; color: white; }
 .iq-mt-15 { margin-top: 15px; }
 .iq-mt-20 { margin-top: 20px; }
 .iq-mt-25 { margin-top: 25px; }
