--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ TIMELINE: 683f11
 *::-moz-selection { background: #f5a03d; color: #000; text-shadow: none; }
 ::-moz-selection { background: #f5a03d; color: #000; text-shadow: none; }
 ::selection { background: #f5a03d; color: #000; text-shadow: none; }
-body { font-family: 'Comfortaa', cursive; font-weight: normal; position: relative; font-style: normal; font-size: 14px; line-height: 26px; color: #000000; overflow-x: hidden; background: #ffbf1a; }
+body { font-family: 'Comfortaa', cursive; font-weight: normal; position: relative; font-style: normal; font-size: 14px; line-height: 26px; color: #000000; overflow-x: hidden;  background-image: url('../images/bg.png');  }
 a:hover, a:focus, a.active { text-decoration: none; outline: none; }
 a, a:hover, a:focus { color: #f5a03d; -webkit-transition: all 250ms ease-in-out 0s; -moz-transition: all 250ms ease-in-out 0s; -ms-transition: all 250ms ease-in-out 0s; -o-transition: all 250ms ease-in-out 0s; transition: all 250ms ease-in-out 0s; text-decoration: none; }
 h1, h2, h3, h4, h5, h6 { font-family: 'Montserrat', sans-serif; font-weight: normal; color: #000; margin-top: 0px; margin-bottom: 0px; }
@@ -380,7 +380,7 @@ Margin Right
 .white-bg { background: #000000; }
 .grey-bg { background: #f7f7f7; }
 .blue-bg { background: #ffbf1a; }
-.light-bg { background: #ffbf1a; }
+.light-bg {  background-image: url('../images/bg.png');  }
 .yellow-bg { background: #f5a03d; }
 
 /*---------------------------------------------------------------------
@@ -457,7 +457,7 @@ header { padding: 20px 80px; position: absolute; display: inline-block; top: 0; 
 header .navbar { padding: 0; }
 header .navbar-brand img { height: 40px; }
 header .navbar-light .nav-item { margin: 0 10px; }
-header .navbar-light .nav-item .nav-link { color: #000; font-size: 16px; line-height: normal; position: relative; -webkit-transition: all 250ms ease-in-out 0s; -moz-transition: all 250ms ease-in-out 0s; -ms-transition: all 250ms ease-in-out 0s; -o-transition: all 250ms ease-in-out 0s; transition: all 250ms ease-in-out 0s; }
+header .navbar-light .nav-item .nav-link { color: #ffffff; font-size: 16px; line-height: normal; position: relative; -webkit-transition: all 250ms ease-in-out 0s; -moz-transition: all 250ms ease-in-out 0s; -ms-transition: all 250ms ease-in-out 0s; -o-transition: all 250ms ease-in-out 0s; transition: all 250ms ease-in-out 0s; }
 header .navbar-light .navbar-nav .nav-link:before { content: ""; display: inline-block; position: absolute; bottom: -3px; left: 50%; margin-left: -3px; background: #f5a03d; height: 6px; width: 6px; border-radius: 90px; opacity: 0; -webkit-transition: all 250ms ease-in-out 0s; -moz-transition: all 250ms ease-in-out 0s; -ms-transition: all 250ms ease-in-out 0s; -o-transition: all 250ms ease-in-out 0s; transition: all 250ms ease-in-out 0s; }
 header .navbar-light .navbar-nav .nav-link:hover, header .navbar-light .navbar-nav .nav-link:focus, header .navbar-light .navbar-nav .nav-item .nav-link.active { color: #f5a03d; }
 header .navbar-light .navbar-nav .nav-link:hover:before, .navbar-light .navbar-nav .nav-link:focus:before, .navbar-light .navbar-nav .nav-item .nav-link.active:before { opacity: 1; }
@@ -521,13 +521,13 @@ header.menu-sticky { position: fixed; background: #1e542a; padding: 10px 30px; b
 #world { position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: inline-block; }
 
 /* ---- particles.js container ---- */
-#particles-js { width: 100%; height: 100%; background-image: url(''); background-size: cover; background-position: 50% 50%; background-repeat: no-repeat;  position: absolute; top: 0; left: 0; }
+#particles-js { width: 100%; height: 100%; background-image: url(''); background-size: cover;  background-position: 50% 50%; background-repeat: no-repeat;  position: absolute; top: 0; left: 0; }
 
 /*---------------------------------------------------------------------
                               Banner 3
 ---------------------------------------------------------------------*/
 .iq-banner-3 { position: relative; padding: 15% 0 10%; overflow: hidden; }
-.iq-banner-3:before { position: absolute; top: 0%; left: 0%; content: ""; width: 100%;  height: 100%; display: inline-block; background-image: url('../images/bg.png'); }
+.iq-banner-3:before { position: absolute; top: 0%; left: 0%; content: ""; width: 100%;  height: 100%; display: inline-block;  background-image: url('../images/bg.png'); }
 .iq-banner-3 .ico-img { margin-top: 10px; bottom: -45px; right: -60px; width: 95%; }
 
 /*---------------------------------------------------------------------
@@ -955,7 +955,7 @@ color: #000; }
 .iq-about ul li img { float: left; }
 .iq-about ul li span { display: table; font-weight: bold; line-height: normal; margin: 10px; padding-left: 10px; }
 .iq-about ul li span b { display: block; font-size: 18px; line-height: normal; margin-bottom: 0px; }
-
+.iq-about{  background-image: url('../images/bg.png'); }
 /*Pricing Small*/
 .iq-small-icon { text-align: center; padding: 30px 10px; margin-bottom: 20px; }
 .iq-small-icon span { display: inline-block; width: 100%; }
